# A365-Quickstart-Observe-Draft-dodger

./: .dockerignore  .env.example  .gitignore  Dockerfile  LESSONS_LEARNED.md  LICENSE  RE-REGISTRATION.md  README.md  SETUP.md  agent.json  agent.py  agent_interface.py  host_agent_server.py  local_authentication_options.py  observability.py  pyproject.toml  requirements.txt  start_with_generic_host.py  token_cache.py
.claude/skills/draft-dodger-setup/: SKILL.md
deployment script/: README.md  create_app_registration.ps1  demo-tenant.config.json.example  deploy.ps1  deployment.json.example  get_mos_token.py  initialize_a365_config.ps1
deployment script/appPackage/: manifest.json
deployment script/manifest/: agenticUserTemplateManifest.json  manifest.json
docs/: AGENT-CLASS-MIGRATION.md  DUPLICATE-REGISTRATION.md  RE-REGISTRATION.md  a365-concepts.html  demo-reregister.md
manifest/: agenticUserTemplateManifest.json  manifest.json
plans/: phase-1-scaffold.md  phase-2-registration-and-observability.md
scripts/: aspire-up.sh  demo-reregister.sh  query-audit.sh  test_a365_export.py
tests/: run_drafts.py  test_main.py
