[project]
name = "draft-dodger"
version = "1.0.0"
description = "Analyses draft emails before you send them. Scores passive aggression, emotional temperature, and formality match; flags risky phrases with rewrites; gives a verdict — SEND, TONE DOWN, or DELETE AND WALK AWAY — with a confidence score."
requires-python = ">=3.12,<3.13"
dependencies = [
    "agent-framework-core==1.0.0b260130",
    "agent-framework-azure-ai==1.0.0b260130",
    "azure-ai-agents>=1.2.0b5",
    "azure-ai-projects>=2.0.0b2",
    "microsoft-agents-hosting-aiohttp",
    "microsoft-agents-hosting-core",
    "microsoft-agents-authentication-msal",
    "microsoft-agents-activity",
    "azure-identity",
    "python-dotenv",
    "aiohttp",
    "uvicorn[standard]>=0.20.0",
    "fastapi>=0.100.0",
    "httpx>=0.24.0",
    "pydantic>=2.0.0",
    "typing-extensions>=4.0.0",
    "microsoft_agents_a365_tooling>=0.1.0",
    "microsoft_agents_a365_tooling_extensions_agentframework>=0.1.0",
    "microsoft_agents_a365_observability_core>=0.1.0",
    "microsoft_agents_a365_observability_extensions_agent_framework>=0.1.0",
    "microsoft_agents_a365_runtime>=0.1.0",
    "microsoft_agents_a365_notifications>=0.1.0",
    "opentelemetry-exporter-otlp-proto-grpc>=1.29.0",
    "azure-monitor-opentelemetry-exporter>=1.0.0b39",
]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
]
